syntax = "proto3";

package ru.otus.numbers;

option java_multiple_files = true;

message NumberRangeRequest {
  int32 firstValue = 1;
  int32 lastValue = 2;
}

message NumberResponse {
  int32 value = 1;
}

service NumberGenerator {
  rpc GenerateNumbers(NumberRangeRequest) returns (stream NumberResponse);
}
